2011-03-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* English.lproj/MainMenu.gorm:
	Change Cmd+u from revert document to underine.
	Add a "Check spelling automatically" menu item.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUmakefile:
	* InkInfo.plist:
	* English.lproj/MainMenu.gorm/data.classes:
	* English.lproj/MainMenu.gorm/objects.gorm:
	* AppDelegate.h:
	* AppDelegate.m:
	Add an application delegate to make Ink a service provider. The
	services allow opening new documents with the current selection
	and for the selected file, respectively.

2010-08-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Document.m (-windowControllerDidLoadNib:):
	Enable the standard NSTextView find panel.
	Also enable smart insert and delete.

	* English.lproj/MainMenu.gorm:
	Add a Find menu.

2010-05-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* English.lproj/MainMenu.gorm:
	Add an Open Recent menu to the Document menu.
	Add a few more key equivalents and fix the key equivalents of the
	Larger and Smaller Font menu items (the latter was conflicting
	with the Save menu item).

2010-02-02  Gregory Casamento  <greg.casamento@gmail.com>

	* Ink_app.ico: Windows icon for Ink.
	* GNUmakefile: Modified to copy ico file into app wrapper.
	
2008-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* English.lproj/MainMenu.gorm: Use keyboard equivalents Cmd-z and
	Cmd-Z for undo and redo menu items.

2008-06-09  Fred Kiefer <FredKiefer@gmx.de>

	* English.lproj/MainMenu.gorm: Change action close: to performClose:
	
2007-10-01  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-textDidChange:): Only change update count if there
	is no undo manager. Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2007-02-05  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-windowControllerDidLoadNib:):
	Allow undo.
	* English.lproj/MainMenu.gorm: Converted to current Gorm format and add undo
	menu entries.
	
2005-10-14  Fred Kiefer <FredKiefer@gmx.de>

	* Document.m (-windowControllerDidLoadNib:):